--- a/main.html
+++ b/main.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
-            <p>Welcome</p>
-            <img src="./images/logo/facebook_logo.jpg" alt="facebook">
-        </div>
-    </header>
+            <p>Welcome to Blooms</p>
+            <p> Facebook</p>
+            <img class="header-logo" src="./images/logo/facebook_logo.jpg" alt="facebook">
+    </div>
+    </header> -->
     <nav class="navbar">
         <div class="container">
             <img src="./images/logo/logo_light.png" alt="Blooms">
