header and navbar

--- a/main.html
+++ b/main.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
             <p>Welcome to Blooms</p>
-            <p> Facebook</p>
-            <img class="header-logo" src="./images/logo/facebook_logo.jpg" alt="facebook">
-    </div>
-    </header> -->
+            <p>Facebook</p>
+        </div>
+    </header>
     <nav class="navbar">
         <div class="container">
             <img src="./images/logo/logo_light.png" alt="Blooms">
