cover and font added

--- a/main.html
+++ b/main.html
@@ -26,8 +26,10 @@
                 <li> <a href="#">Contact Us</a> </li>
             </ul>
         </div>
-
     </nav>
+    <div class="hero-content">
+        <img src="./images/cover-wide4 (copy).jpg" alt="">
+    </div>
     <main class="main-content"></main>
 </body>
 
