--- a/main.html
+++ b/main.html
@@ -30,7 +30,52 @@
     <div class="hero-content">
         <img src="./images/cover-wide4 (copy).jpg" alt="">
     </div>
-    <main class="main-content"></main>
+    <main class="main-content">
+        <div class="container">
+            <h1>About Us</h1>
+            <div class="about">
+                <img class="about-img" src="./images/img-4.jpg" alt="Flower-About-Us">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nihil voluptates dignissimos earum ipsa impedit non, modi accusamus molestiae, sint, sit aliquid eaque in possimus ipsam. Illum earum saepe id. Cupiditate aspernatur, dolore
+                    voluptas nesciunt porro, cumque doloribus illo dolor asperiores suscipit unde officiis ipsam? At eos tempore quas obcaecati rem provident laboriosam earum saepe, illum culpa, natus ullam beatae. Libero, dolorem ea at, consectetur,
+                    eligendi sed perferendis molestiae natus rerum quas laboriosam. Laudantium dolorem quos molestias voluptate iste officia! Ad, animi reprehenderit unde eos rerum modi id nesciunt blanditiis.</p>
+            </div>
+            <div class="service">
+                <h1>Our Services</h1>
+
+                <div class="card">
+                    <div>
+                        <h2>Graphic Designer</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quae odio a, quibusdam vero ipsa</p>
+                    </div>
+                    <div>
+                        <h2>Graphic Designer</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quae odio a, quibusdam vero ipsa</p>
+                    </div>
+                    <div>
+                        <h2>Graphic Designer</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quae odio a, quibusdam vero ipsa</p>
+                    </div>
+                </div>
+                <div class="about-collage">
+                    <h1>About Us</h1>
+                    <div class="container">
+                        <div class="collage-img">
+                            <img src="./images/por-2.jpg" alt="">
+                            <img src="./images/img-2.jpg" alt="">
+                            <img src="./images/por-4.jpg" alt="">
+                            <img src="./images/img-8.jpeg" alt="">
+                            <img src="./images/img-10.jpg" alt="">
+                            <img src="./images/por-5.jpeg" alt="">
+                            <img src="./images/img-9.jpg" alt="">
+                            <img src="./images/por-3.jpg" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </main>
 </body>
 
 </html>
