--- a/main.html
+++ b/main.html
@@ -1,81 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="container">
-            <p>Welcome to Blooms</p>
-            <p>Facebook</p>
-        </div>
+      <div class="container">
+        <p>Welcome to Blooms</p>
+        <p>Facebook</p>
+      </div>
     </header>
     <nav class="navbar">
-        <div class="container">
-            <img src="./images/logo/logo_light.png" alt="Blooms">
-            <ul class="menu">
-                <li> <a href="#">About</a> </li>
-                <li> <a href="#">Gallery</a> </li>
-                <li> <a href="#">Blogs</a> </li>
-                <li> <a href="#">Contact Us</a> </li>
-            </ul>
-        </div>
+      <div class="container">
+        <img src="./images/logo/logo_light.png" alt="Blooms" />
+        <ul class="menu">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Blogs</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
     </nav>
     <div class="hero-content">
-        <img src="./images/cover-wide4 (copy).jpg" alt="">
+      <img src="./images/cover-wide4 (copy).jpg" alt="" />
     </div>
     <main class="main-content">
-        <div class="container">
-            <h1>About Us</h1>
-            <div class="about">
-                <img class="about-img" src="./images/img-4.jpg" alt="Flower-About-Us">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nihil voluptates dignissimos earum ipsa impedit non, modi accusamus molestiae, sint, sit aliquid eaque in possimus ipsam. Illum earum saepe id. Cupiditate aspernatur, dolore
-                    voluptas nesciunt porro, cumque doloribus illo dolor asperiores suscipit unde officiis ipsam? At eos tempore quas obcaecati rem provident laboriosam earum saepe, illum culpa, natus ullam beatae. Libero, dolorem ea at, consectetur,
-                    eligendi sed perferendis molestiae natus rerum quas laboriosam. Laudantium dolorem quos molestias voluptate iste officia! Ad, animi reprehenderit unde eos rerum modi id nesciunt blanditiis.</p>
-            </div>
-            <div class="service">
-                <h1>Our Services</h1>
-
-                <div class="card">
-                    <div>
-                        <h2>Graphic Designer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quae odio a, quibusdam vero ipsa</p>
-                    </div>
-                    <div>
-                        <h2>Graphic Designer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quae odio a, quibusdam vero ipsa</p>
-                    </div>
-                    <div>
-                        <h2>Graphic Designer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quae odio a, quibusdam vero ipsa</p>
-                    </div>
-                </div>
-                <div class="about-collage">
-                    <h1>About Us</h1>
-                    <div class="container">
-                        <div class="collage-img">
-                            <img src="./images/por-2.jpg" alt="">
-                            <img src="./images/img-2.jpg" alt="">
-                            <img src="./images/por-4.jpg" alt="">
-                            <img src="./images/img-8.jpeg" alt="">
-                            <img src="./images/img-10.jpg" alt="">
-                            <img src="./images/por-5.jpeg" alt="">
-                            <img src="./images/img-9.jpg" alt="">
-                            <img src="./images/por-3.jpg" alt="">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
+      <div class="container">
+        <h1>About Us</h1>
+        <div class="about">
+          <img
+            class="about-img"
+            src="./images/img-4.jpg"
+            alt="Flower-About-Us"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nihil
+            voluptates dignissimos earum ipsa impedit non, modi accusamus
+            molestiae, sint, sit aliquid eaque in possimus ipsam. Illum earum
+            saepe id. Cupiditate aspernatur, dolore voluptas nesciunt porro,
+            cumque doloribus illo dolor asperiores suscipit unde officiis ipsam?
+            At eos tempore quas obcaecati rem provident laboriosam earum saepe,
+            illum culpa, natus ullam beatae. Libero, dolorem ea at, consectetur,
+            eligendi sed perferendis molestiae natus rerum quas laboriosam.
+            Laudantium dolorem quos molestias voluptate iste officia! Ad, animi
+            reprehenderit unde eos rerum modi id nesciunt blanditiis.
+          </p>
         </div>
+        <div class="service">
+          <h1>Our Services</h1>
 
+          <div class="card">
+            <div>
+              <h2>Graphic Designer</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt quae odio a, quibusdam vero ipsa
+              </p>
+            </div>
+            <div>
+              <h2>Graphic Designer</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt quae odio a, quibusdam vero ipsa
+              </p>
+            </div>
+            <div>
+              <h2>Graphic Designer</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt quae odio a, quibusdam vero ipsa
+              </p>
+            </div>
+          </div>
+          <div class="about-collage">
+            <h1>About Us</h1>
+            <div class="container">
+              <div>
+                <img src="./images/por-4.jpg" alt="" />
+                <img src="./images/por-2.jpg" alt="" />
+              </div>
+              <div>
+                <img src="./images/img-2.jpg" alt="" />
+                <img src="./images/por-8.jpg" alt="" />
+              </div>
+               <div>
+                <img src="./images/por-7.jpg" alt="" />
+                <img src="./images/img-13.jpg" alt="" />
+              </div>
+              <div>
+                <img src="./images/img-8.jpeg" alt="" />
+                <img src="./images/por-3.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
